Fixed overlay bug (moved div outside of body and reset body's z-index)

--- a/src/styles/BlockPopup.css
+++ b/src/styles/BlockPopup.css
@@ -1,28 +1,26 @@
-body {
-    font-family: monospace;
-    font-weight: normal;
-    font-size: 15pt;
-}
-
 .overlay {
-    background-color: rgba(0,0,0,0.9);
-    width: 100vw;
-    height: 100vh;
+    font-family: monospace !important;
+    font-weight: normal !important;
+    font-size: 15pt !important;
+    background-color: rgba(0,0,0,0.8);
+    width: 100vw !important;
+    height: 100vh !important;
     position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 2147483637;
+    top: 0 !important;
+    left: 0 !important;
+    overflow: auto;
     backdrop-filter: blur(4px);
+    z-index: 2147483637 !important;
 }
 
 .main {
     background-color: #FFFFFF;
     width: 20vw;
-    height: 50vh;
+    height: 45vh;
     margin: 10em auto;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0,0,0,0.14);
-    z-index: 2147483638;
+    z-index: 2147483638 !important;
     text-align: center;
 }
 
@@ -39,7 +37,8 @@ body {
 }
 
 .focusModeText {
-    padding-top: 20px;
+    padding-top: 10%;
+    padding-bottom: 5%;
 }
 
 .focusGroupText {
